--- a/sobre.html
+++ b/sobre.html
@@ -52,7 +52,7 @@
 			<li> Temos o selo de garantia do M.A.P.A  o órgão responsável pela regulamentação e fiscalização do setor de produtos destinados à alimentação animal. </li>
 			</ul>
             
-			<p class="link"><a style="text-align: center;" href="index.html">nossa loja</a></p>
+			<p class="link"><a style="text-align: center;" href="Mais/index.html">nossa loja</a></p>
     		
 		</div>	
 	</main>
