--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body >
 	<main >        
-    	<p class="image1"style="text-align: center;"><img src="img/Logopitico.jpeg"  alt="Logo da marca Piticos pet" title="Logo" style="border-radius: 100%;" ></p>
+    	<p class="image1"style="text-align: center;"><img src="img/logoPitico.jpeg"  alt="Logo da marca Piticos pet" title="Logo" style="border-radius: 100%;" ></p>
 						
 		<div style="color: white;">
 	        
